Both files contain conflicting answers

--- a/Hey.html
+++ b/Hey.html
@@ -12,5 +12,8 @@ When You are going to complete. Make it fast.
 Have you completed.
 Now I need the work completed by tomorrow.
 do you sing
+can we meet today?
+No
+
 </body>
 </html>
